# large-bit-mask

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: pipelines.yaml
docs/: CMakeLists.txt
examples/: CMakeLists.txt
examples/src/: main.c
include/: large_bit_mask.h
src/: large_bit_mask.c
test/: CMakeLists.txt
test/src/: capacity_size.cpp  get_bit.cpp  init_bit_mask.cpp  set_bit.cpp
